[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-nanumber"
version = "0.2.0"
description = "Universal auto-number generator library with flexible templates and multi-database support"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
  { name = "Risna Berti", email = "risnaberti07@gmail.com" }
]
keywords = [
    "autonumber", 
    "generator", 
    "sqlalchemy", 
    "fastapi", 
    "django",
    "auto-increment",
    "sequence-generator"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "SQLAlchemy>=1.4,<3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/risnaberti/nanumber"
Documentation = "https://github.com/risnaberti/nanumber#readme"
Repository = "https://github.com/risnaberti/nanumber"
Issues = "https://github.com/risnaberti/nanumber/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["risnaberti*"]